Bug 1784571 - Responsive alignment for new MR about:welcome splash. r=mviar
Adjust the alignment of the logo and heading on the new about:welcome
splash for viewports under 800px width.

Differential Revision: https://phabricator.services.mozilla.com/D154955

UltraBlame original commit: 54ef8ff93c67150db0aab14d2e04b6b6e1c8f384

--- a/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
+++ b/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
@@ -2192,20 +2192,6 @@ align
 :
 start
 ;
-&
-:
-dir
-(
-rtl
-)
-{
-text
--
-align
-:
-end
-;
-}
 }
 .
 brand
@@ -2923,6 +2909,17 @@ center
 ;
 }
 .
+logo
+-
+container
+{
+text
+-
+align
+:
+center
+;
+.
 brand
 -
 logo
@@ -2949,11 +2946,18 @@ center
 ;
 }
 }
+}
 .
 welcome
 -
 text
 {
+align
+-
+items
+:
+center
+;
 text
 -
 align
